fixed the position of the images from bottom the bottom of page to the left of posts. Changed filter text from 'Choose a Game' to 'Jump to Game'

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,7 +41,7 @@
      font-size: 2em;
      margin-bottom: 35px;
    }
-    
+
    #nav img {
      margin-top: 5px;
    }
@@ -68,6 +68,14 @@
     float: left;
     position: fixed;
     font-size: 12px;
+  }
+
+  .game-image img {
+    margin-top: 10px;
+    width: 235px;
+    height: 335px;
+    box-shadow: 0px 0px 1px .02em #F8AC00;
+    border-radius: 2px;
   }
 
   #game-name {
